Adding fixed html with missing hidden aria for tags used for decoration

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 loading="lazy"
                 src="./images/van-violet.png"
               />
-              <span class="decor uppercase">&lt;/html&gt;</span>
+              <span aria-hidden="true" class="decor uppercase">&lt;/html&gt;</span>
             </div>
             <div class="info__paragraph-block">
               <p class="info__text">
@@ -97,7 +97,7 @@
                 loading="lazy"
                 src="./images/van-violet.png"
               />
-              <span class="decor uppercase">&lt;/html&gt;</span>
+              <span aria-hidden="true" class="decor uppercase">&lt;/html&gt;</span>
             </div>
             <div class="info__paragraph-block">
               <p class="info__text">
@@ -164,7 +164,7 @@
                 loading="lazy"
                 src="./images/van-violet.png"
               />
-              <span class="decor uppercase">&lt;css&gt;</span>
+              <span aria-hidden="true" class="decor uppercase">&lt;css&gt;</span>
             </div>
 
             <div class="info__paragraph-block">
@@ -229,7 +229,7 @@
                 loading="lazy"
                 src="./images/van-violet.png"
               />
-              <span class="decor">&lt;desigions&gt;</span>
+              <span aria-hidden="true" class="decor">&lt;desigions&gt;</span>
             </div>
 
             <div class="info__paragraph-block">
@@ -366,7 +366,7 @@
                 loading="lazy"
                 src="./images/van-violet.png"
               />
-              <span class="decor">&lt;support&gt;</span>
+              <span aria-hidden="true" class="decor">&lt;support&gt;</span>
             </div>
 
             <div class="info__paragraph-block">
@@ -432,7 +432,7 @@
                 loading="lazy"
                 src="./images/van-violet.png"
               />
-              <span class="decor">&lt;lifes-style: none;&gt;</span>
+              <span aria-hidden="true" class="decor">&lt;lifes-style: none;&gt;</span>
             </div>
 
             <div class="info__paragraph-block">
@@ -498,7 +498,7 @@
                 loading="lazy"
                 src="./images/van-violet.png"
               />
-              <span class="decor">&lt;experience&gt;</span>
+              <span aria-hidden="true" class="decor">&lt;experience&gt;</span>
             </div>
 
             <div class="info__paragraph-block">
