Adding fixed files after 1st review

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
     <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/favicon.png"/>
   </head>
   <body class="page">
     <header class="header header-section uppercase">
@@ -48,7 +49,7 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg
+                <svg aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -115,7 +116,7 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg
+                <svg aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -180,7 +181,7 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg
+                <svg aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -247,7 +248,7 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg
+                <svg aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -317,7 +318,7 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg
+                <svg aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -383,7 +384,7 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg
+                <svg aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -449,7 +450,7 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg
+                <svg aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -518,7 +519,7 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg
+                <svg aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -557,14 +558,14 @@
           </article>
         </li>
       </ul>
-      <div class="button-block_margin">
+      <!-- <div class="button-block_margin"> -->
         <button
           type="button"
           class="button button_save"
           onclick="window['dialog'].showModal()"
           aria-controls="dialog"
         >
-          <svg
+          <svg aria-hidden="true"
             viewBox="0 0 39 39"
             width="39px"
             height="39px"
@@ -575,10 +576,10 @@
           </svg>
           <span class="button__text">Сохранить на память</span>
         </button>
-      </div>
+      <!-- </div> -->
 
       <dialog id="dialog" class="dialog">
-        <svg
+        <svg aria-hidden="true"
           class="dialog-floppy"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 39 39"
