Adding fixed files with all fixed defects

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
     <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./images/favicon.png"/>
+    <link rel="apple-touch-icon" href="./images/favicon.png" />
   </head>
   <body class="page">
     <header class="header header-section uppercase">
@@ -34,7 +34,9 @@
                 loading="lazy"
                 src="./images/van-violet.png"
               />
-              <span aria-hidden="true" class="decor uppercase">&lt;/html&gt;</span>
+              <span aria-hidden="true" class="decor uppercase"
+                >&lt;/html&gt;</span
+              >
             </div>
             <div class="info__paragraph-block">
               <p class="info__text">
@@ -49,7 +51,8 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg aria-hidden="true"
+                <svg
+                  aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -98,7 +101,9 @@
                 loading="lazy"
                 src="./images/van-violet.png"
               />
-              <span aria-hidden="true" class="decor uppercase">&lt;/html&gt;</span>
+              <span aria-hidden="true" class="decor uppercase"
+                >&lt;/html&gt;</span
+              >
             </div>
             <div class="info__paragraph-block">
               <p class="info__text">
@@ -116,7 +121,8 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg aria-hidden="true"
+                <svg
+                  aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -165,7 +171,9 @@
                 loading="lazy"
                 src="./images/van-violet.png"
               />
-              <span aria-hidden="true" class="decor uppercase">&lt;css&gt;</span>
+              <span aria-hidden="true" class="decor uppercase"
+                >&lt;css&gt;</span
+              >
             </div>
 
             <div class="info__paragraph-block">
@@ -181,7 +189,8 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg aria-hidden="true"
+                <svg
+                  aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -248,7 +257,8 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg aria-hidden="true"
+                <svg
+                  aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -318,7 +328,8 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg aria-hidden="true"
+                <svg
+                  aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -384,7 +395,8 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg aria-hidden="true"
+                <svg
+                  aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -433,7 +445,9 @@
                 loading="lazy"
                 src="./images/van-violet.png"
               />
-              <span aria-hidden="true" class="decor">&lt;lifes-style: none;&gt;</span>
+              <span aria-hidden="true" class="decor"
+                >&lt;lifes-style: none;&gt;</span
+              >
             </div>
 
             <div class="info__paragraph-block">
@@ -450,7 +464,8 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg aria-hidden="true"
+                <svg
+                  aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -519,7 +534,8 @@
             </div>
             <div class="info__buttons">
               <button class="card__icon-button" type="button">
-                <svg aria-hidden="true"
+                <svg
+                  aria-hidden="true"
                   class="like-icon"
                   width="39"
                   height="36"
@@ -559,27 +575,29 @@
         </li>
       </ul>
       <!-- <div class="button-block_margin"> -->
-        <button
-          type="button"
-          class="button button_save"
-          onclick="window['dialog'].showModal()"
-          aria-controls="dialog"
+      <button
+        type="button"
+        class="button button_save"
+        onclick="window['dialog'].showModal()"
+        aria-controls="dialog"
+      >
+        <svg
+          aria-hidden="true"
+          viewBox="0 0 39 39"
+          width="39px"
+          height="39px"
+          class="button__floppy"
+          fill="currentColor"
         >
-          <svg aria-hidden="true"
-            viewBox="0 0 39 39"
-            width="39px"
-            height="39px"
-            class="button__floppy"
-            fill="currentColor"
-          >
-            <use href="./svg/floppy.svg#floppy" />
-          </svg>
-          <span class="button__text">Сохранить на память</span>
-        </button>
+          <use href="./svg/floppy.svg#floppy" />
+        </svg>
+        <span class="button__text">Сохранить на память</span>
+      </button>
       <!-- </div> -->
 
       <dialog id="dialog" class="dialog">
-        <svg aria-hidden="true"
+        <svg
+          aria-hidden="true"
           class="dialog-floppy"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 39 39"
